--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,8 +10,9 @@ plugins:
   - '@typescript-eslint'
 rules: {
   indent: ['error', 'tab'],
+  "no-use-before-define": 0,
   quotes: [2, 'single'],
   semi: [2, 'always'],
   no-tabs: 0,
-  eqeqeq: 0,
+  eqeqeq: 0
 }
