--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "dependencies": {
+    "@corcc/useragent": "github:corcc/useragent",
+    "@types/node": "^18.11.3",
     "apollo-server-micro": "^2.11.0",
     "date-fns": "^2.11.0",
     "global": "^4.4.0",
-    "graphql": "^14.7.0"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "2.11.0",
-    "@graphql-codegen/introspection": "2.2.0",
-    "@graphql-codegen/typescript": "2.7.2",
-    "@graphql-codegen/typescript-resolvers": "2.7.2",
-    "@types/micro-cors": "^0.1.2",
-    "micro-cors": "^0.1.1",
-    "microrouter": "^3.1.3",
-    "typescript": "^4.7.4"
+    "graphql": "^14.7.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "scripts": {
-    "generate": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen --config codegen.yml",
+    "dev": "yarn generate && ts-node ./server.ts"
   },
-		"type" : "module"
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
+    "eslint": "^8.0.1",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0"
+  }
 }
